--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
@@ -14,6 +17,11 @@
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "daisyui": "^5.4.7"
+    "@testing-library/dom": "^10.4.1",
+    "@vitest/ui": "^3.2.4",
+    "daisyui": "^5.4.7",
+    "happy-dom": "^20.0.10",
+    "jsdom": "^27.0.1",
+    "vitest": "^3.2.4"
   }
 }
